Updated the landing page
Also changed the styles of distance-marker anchor tags

--- a/index.html
+++ b/index.html
@@ -701,8 +701,12 @@
         <div><strong>250m</strong></div>
       </div>
 
+      <!-- <div class ="section top-section" data-altitude="10"> -->
+        
+
       <div class="section middle-section" id="landing-page" data-altitude="0">
         <div>
+          <strong>Scroll up or down ↕️</strong><br /><br />
           <a href="#top-page">--0m above</a>
           <a href="#bottom-page">sea level--</a>
         </div>
