--- a/index.html
+++ b/index.html
@@ -702,7 +702,6 @@
       </div>
 
       <!-- <div class ="section top-section" data-altitude="10"> -->
-        
 
       <div class="section middle-section" id="landing-page" data-altitude="0">
         <div>
@@ -713,7 +712,7 @@
       </div>
 
       <div class="distance-marker" data-altitude="-100">
-        <a href="#landing-page"><strong>-100m</strong></a>
+        <a href="#-1000m"><strong>-100m</strong></a>
       </div>
 
       <div class="timeline-point" id="-100m" data-altitude="-100"></div>
@@ -743,7 +742,7 @@
       </div>
 
       <div class="distance-marker" data-altitude="-500">
-        <a href="#-100m"><strong>-500m</strong></a>
+        <a href="#-1000m"><strong>-500m</strong></a>
       </div>
 
       <div class="timeline-point" data-altitude="-500"></div>
@@ -770,7 +769,7 @@
         <strong>-900m</strong>
       </div>
 
-      <div class="distance-marker" data-altitude="-1000">
+      <div class="distance-marker" id="-1000m" data-altitude="-1000">
         <a href="#-2000m"><strong>-1000m</strong></a>
       </div>
 
